feat(general-item): added general items endpoint and outputconverter